--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,10 +26,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Modul">Modul</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Modul" asp-action="Modul">Modul</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Note">Note</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Note" asp-action="Note">Note</a>
                         </li>
                     </ul>
                 </div>
