--- a/Views/Note/Note.cshtml
+++ b/Views/Note/Note.cshtml
@@ -31,6 +31,6 @@
         </tr>
     </table>
 
-    <input type="submit" value="Modul hinzufügen" />
+    <input type="submit" value="Note hinzufügen" />
 
 }
