--- a/Views/Moduls/Index.cshtml
+++ b/Views/Moduls/Index.cshtml
@@ -10,7 +10,7 @@
 <h2>Currently in semester @semester.Name @semester.SemesterID</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-route-semesterId="@ViewContext.RouteData.Values["semesterId"]" asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -28,9 +28,10 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ModulID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ModulID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ModulID">Delete</a>
+                <a asp-action="Edit" asp-route-semesterId="@ViewContext.RouteData.Values["semesterId"]" asp-route-id="@item.ModulID">Edit</a> |
+                <a asp-action="Details" asp-route-semesterId="@ViewContext.RouteData.Values["semesterId"]" asp-route-id="@item.ModulID">Details</a> |
+                <a asp-action="Delete" asp-route-semesterId="@ViewContext.RouteData.Values["semesterId"]" asp-route-id="@item.ModulID">Delete</a> |
+                <a asp-area="" asp-controller="Grades" asp-action="Index" asp-route-modulId="@item.ModulID">Grades</a>
             </td>
         </tr>
 }
