--- a/Views/Semesters/Index.cshtml
+++ b/Views/Semesters/Index.cshtml
@@ -27,7 +27,8 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.SemesterID">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.SemesterID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.SemesterID">Delete</a>
+                <a asp-action="Delete" asp-route-id="@item.SemesterID">Delete</a> |
+                <a asp-area="" asp-controller="Moduls" asp-action="Index" asp-route-semesterId="@item.SemesterID">Moduls</a>
             </td>
         </tr>
 }
