--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -23,9 +23,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Semesters" asp-action="Semesters">Semester</a>
-                        </li>
-                        <li class="nav-item"
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Semesters" asp-action="Index">Semester</a>
                         </li>
                     </ul>
                 </div>
