--- a/Views/Moduls/Index.cshtml
+++ b/Views/Moduls/Index.cshtml
@@ -10,7 +10,7 @@
 <h2>Currently in semester @semester.Name @semester.SemesterID</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Neu</a>
 </p>
 <table class="table">
     <thead>
