--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -25,7 +25,8 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Semesters" asp-action="Semesters">Semester</a>
                         </li>
-                        <li class="nav-item"
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Privacy" asp-action="privacy">Privacy</a>
                         </li>
                     </ul>
                 </div>
