--- a/Views/Grades/Details.cshtml
+++ b/Views/Grades/Details.cshtml
@@ -31,6 +31,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.GradeID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-modulId="@ViewContext.RouteData.Values["modulId"]" asp-route-id="@Model.GradeID">Edit</a> |
+    <a asp-action="Index" asp-route-modulId="@ViewContext.RouteData.Values["modulId"]">Back to List</a>
 </div>
