--- a/Views/Grades/Index.cshtml
+++ b/Views/Grades/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" asp-route-modulId="@ViewContext.RouteData.Values["modulId"]">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -37,9 +37,9 @@
                 @Html.DisplayFor(modelItem => item.Gewichtung)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.GradeID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.GradeID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.GradeID">Delete</a>
+                <a asp-action="Edit" asp-route-modulId="@ViewContext.RouteData.Values["modulId"]" asp-route-id="@item.GradeID">Edit</a> |
+                <a asp-action="Details" asp-route-modulId="@ViewContext.RouteData.Values["modulId"]" asp-route-id="@item.GradeID">Details</a> |
+                <a asp-action="Delete" asp-route-modulId="@ViewContext.RouteData.Values["modulId"]" asp-route-id="@item.GradeID">Delete</a>
             </td>
         </tr>
 }
