--- a/Views/Grades/Create.cshtml
+++ b/Views/Grades/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" asp-route-modulId="@ViewContext.RouteData.Values["modulId"]">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -35,7 +35,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" asp-route-modulId="@ViewContext.RouteData.Values["modulId"]">Back to List</a>
 </div>
 
 @section Scripts {
