--- a/Views/Moduls/Edit.cshtml
+++ b/Views/Moduls/Edit.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" asp-route-semesterId="@ViewContext.RouteData.Values["semesterId"]">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ModulID" />
             <div class="form-group">
@@ -26,7 +26,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" asp-route-semesterId="@ViewContext.RouteData.Values["semesterId"]">Back to List</a>
 </div>
 
 @section Scripts {
