--- a/Views/Semesters/Index.cshtml
+++ b/Views/Semesters/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Index";
+    
 }
 
 <h1>Index</h1>
@@ -19,18 +20,21 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.SemesterID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.SemesterID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.SemesterID">Delete</a> |
-                <a asp-area="" asp-controller="Moduls" asp-action="Index" asp-route-semesterId="@item.SemesterID">Moduls</a>
-            </td>
-        </tr>
+        @foreach (var item in Model)
+        {
+            var average = Durchschnitt.CalculateForSemester(item);
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.SemesterID">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.SemesterID">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.SemesterID">Delete</a> |
+                    <a asp-area="" asp-controller="Moduls" asp-action="Index" asp-route-semesterId="@item.SemesterID">Moduls</a>
+                    <p>Durchschnitt: @average</p>
+                </td>
+            </tr>
 }
     </tbody>
 </table>
