--- a/Views/Moduls/Index.cshtml
+++ b/Views/Moduls/Index.cshtml
@@ -12,7 +12,7 @@
 <hr/>
 
 <p>
-    <a asp-route-semesterId="@ViewContext.RouteData.Values["semesterId"]" asp-action="Create">Create New Modul</a>
+    Erstelle <a asp-route-semesterId="@ViewContext.RouteData.Values["semesterId"]" asp-action="Create">hier</a> ein neues Modul
 </p>
 <table class="table">
     <thead>
