--- a/Views/Semesters/Index.cshtml
+++ b/Views/Semesters/Index.cshtml
@@ -2,13 +2,16 @@
 
 @{
     ViewData["Title"] = "Index";
-    
+
 }
 
-<h1>Index</h1>
+<div>
+    <h4>Deine Semester</h4>
+</div>
+<hr />
 
 <p>
-    <a asp-action="Create">Create New</a>
+    Erstelle <a asp-action="Create">hier</a> ein neues Semester
 </p>
 <table class="table">
     <thead>
@@ -35,6 +38,6 @@
                     <p>Durchschnitt: @average</p>
                 </td>
             </tr>
-}
+        }
     </tbody>
 </table>
