--- a/Views/Grades/Create.cshtml
+++ b/Views/Grades/Create.cshtml
@@ -1,12 +1,12 @@
 ﻿@model Notentool.Models.Entities.Grade
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Erstellen";
 }
 
-<h1>Create</h1>
+<h1>Erstellen</h1>
 
-<h4>Grade</h4>
+<h4>Note</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
