--- a/Views/Grades/Details.cshtml
+++ b/Views/Grades/Details.cshtml
@@ -7,7 +7,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>Grade</h4>
+    <h4>Note</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -32,5 +32,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-modulId="@ViewContext.RouteData.Values["modulId"]" asp-route-id="@Model.GradeID">Edit</a> |
-    <a asp-action="Index" asp-route-modulId="@ViewContext.RouteData.Values["modulId"]">Back to List</a>
+    <a asp-action="Index" asp-route-modulId="@ViewContext.RouteData.Values["modulId"]">Zurück</a>
 </div>
