--- a/Views/Moduls/Create.cshtml
+++ b/Views/Moduls/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Notentool.Models.Entities.Modul
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Erstellen";
 }
 
-<h1>Create</h1>
+<h1>Erstellen</h1>
 
 <h4>Modul</h4>
 <hr />
@@ -25,7 +25,7 @@
 </div>
 
 <div>
-    <a asp-action="Index" asp-route-semesterId="@ViewContext.RouteData.Values["semesterId"]">Back to List</a>
+    <a asp-action="Index" asp-route-semesterId="@ViewContext.RouteData.Values["semesterId"]">Zurück</a>
 </div>
 
 @section Scripts {
