--- a/Views/Moduls/Delete.cshtml
+++ b/Views/Moduls/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model Notentool.Models.Entities.Modul
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Löschen";
 }
 
-<h1>Delete</h1>
+<h1>Löschen</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Willst du dies wirklich löschen?</h3>
 <div>
     <h4>Modul</h4>
     <hr />
