--- a/Views/Semesters/Create.cshtml
+++ b/Views/Semesters/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Notentool.Models.Entities.Semester
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Erstellen";
 }
 
-<h1>Create</h1>
+<h1>Erstellen</h1>
 
 <h4>Semester</h4>
 <hr />
