--- a/Views/Grades/Delete.cshtml
+++ b/Views/Grades/Delete.cshtml
@@ -1,36 +1,36 @@
 ﻿@model Notentool.Models.Entities.Grade
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Löschen";
 }
 
-<h1>Delete</h1>
+<h1>Löschen</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Willst du dies wirklich löschen?</h3>
 <div>
-    <h4>Grade</h4>
+    <h4>Note</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Note)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Note)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Gewichtung)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Gewichtung)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete" asp-route-modulId="@ViewContext.RouteData.Values["modulId"]">
         <input type="hidden" asp-for="GradeID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
