--- a/Views/Grades/Edit.cshtml
+++ b/Views/Grades/Edit.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Edit</h1>
 
-<h4>Grade</h4>
+<h4>Note</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -36,7 +36,7 @@
 </div>
 
 <div>
-    <a asp-action="Index" asp-route-modulId="@ViewContext.RouteData.Values["modulId"]">Back to List</a>
+    <a asp-action="Index" asp-route-modulId="@ViewContext.RouteData.Values["modulId"]">Zurück</a>
 </div>
 
 @section Scripts {
