--- a/Views/Moduls/Details.cshtml
+++ b/Views/Moduls/Details.cshtml
@@ -20,5 +20,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.ModulID">Edit</a> |
-    <a asp-action="Index" asp-route-semesterId="@ViewContext.RouteData.Values["semesterId"]">Back to List</a>
+    <a asp-action="Index" asp-route-semesterId="@ViewContext.RouteData.Values["semesterId"]">Zurück</a>
 </div>
