--- a/Views/Semesters/Delete.cshtml
+++ b/Views/Semesters/Delete.cshtml
@@ -1,24 +1,24 @@
 ﻿@model Notentool.Models.Entities.Semester
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Löschen";
 }
 
-<h1>Delete</h1>
+<h1>Löschen</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Willst du dies wirklich löschen?</h3>
 <div>
     <h4>Semester</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="SemesterID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
