--- a/Views/Semesters/Details.cshtml
+++ b/Views/Semesters/Details.cshtml
@@ -20,6 +20,6 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.SemesterID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Zurück</a>
     <a asp-action=""></a>
 </div>
