--- a/Views/Semesters/Edit.cshtml
+++ b/Views/Semesters/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Editieren</h1>
 
 <h4>Semester</h4>
 <hr />
@@ -26,7 +26,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Zurück</a>
 </div>
 
 @section Scripts {
