--- a/Views/Semesters/Index.cshtml
+++ b/Views/Semesters/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Notentool.Models.Entities.Semester>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Semester";
 
 }
 
@@ -32,9 +32,8 @@
                 </td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.SemesterID">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.SemesterID">Details</a> |
                     <a asp-action="Delete" asp-route-id="@item.SemesterID">Delete</a> |
-                    <a asp-area="" asp-controller="Moduls" asp-action="Index" asp-route-semesterId="@item.SemesterID">Moduls</a>
+                    <a asp-area="" asp-controller="Moduls" asp-action="Index" asp-route-semesterId="@item.SemesterID">Details</a>
                     <p>Durchschnitt: @average</p>
                 </td>
             </tr>
