--- a/Views/Grades/Delete.cshtml
+++ b/Views/Grades/Delete.cshtml
@@ -4,9 +4,11 @@
     ViewData["Title"] = "Löschen";
 }
 
-<h1>Löschen</h1>
-
-<h3>Willst du dies wirklich löschen?</h3>
+<div>
+    <a asp-action="Index" asp-route-modulId="@ViewContext.RouteData.Values["modulId"]">← Zurück zum Modul</a>
+</div>
+<h1>Note @Model.Name Löschen</h1>
+<h3>Willst du diese Note wirklich löschen?</h3>
 <div>
     <h4>Note</h4>
     <hr />
@@ -33,7 +35,7 @@
 
     <form asp-action="Delete" asp-route-modulId="@ViewContext.RouteData.Values["modulId"]">
         <input type="hidden" asp-for="GradeID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index" asp-route-modulId="@ViewContext.RouteData.Values["modulId"]">Back to List</a>
+        <input type="submit" value="Löschen" class="btn btn-danger" /> |
+        <a asp-action="Index" asp-route-modulId="@ViewContext.RouteData.Values["modulId"]">Abbrechen</a>
     </form>
 </div>
