--- a/Views/Grades/Details.cshtml
+++ b/Views/Grades/Details.cshtml
@@ -4,8 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
-
+<div>
+    <a asp-action="Index" asp-route-modulId="@ViewContext.RouteData.Values["modulId"]">← Zurück zum Modul</a>
+</div>
+<h1>Note @Model.Name</h1>
 <div>
     <h4>Note</h4>
     <hr />
@@ -31,6 +33,5 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-modulId="@ViewContext.RouteData.Values["modulId"]" asp-route-id="@Model.GradeID">Edit</a> |
-    <a asp-action="Index" asp-route-modulId="@ViewContext.RouteData.Values["modulId"]">Zurück</a>
+    <a asp-action="Edit" asp-route-modulId="@ViewContext.RouteData.Values["modulId"]" asp-route-id="@Model.GradeID">Bearbeiten</a>
 </div>
