--- a/Views/Grades/Edit.cshtml
+++ b/Views/Grades/Edit.cshtml
@@ -4,9 +4,10 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
-
-<h4>Note</h4>
+<div>
+    <a asp-action="Index" asp-route-modulId="@ViewContext.RouteData.Values["modulId"]">← Zurück zum Modul</a>
+</div>
+<h1>Note @Model.Name bearbeiten</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -29,14 +30,11 @@
                 <span asp-validation-for="Gewichtung" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Speichern" class="btn btn-primary" /> |
+                <a asp-action="Index" asp-route-modulId="@ViewContext.RouteData.Values["modulId"]">Abbrechen</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index" asp-route-modulId="@ViewContext.RouteData.Values["modulId"]">Zurück</a>
 </div>
 
 @section Scripts {
