--- a/Views/Moduls/Index.cshtml
+++ b/Views/Moduls/Index.cshtml
@@ -4,10 +4,17 @@
 @{
     ViewData["Title"] = "Module";
     var semester = ViewData["Semester"] as Semester;
+    var semesterAverage = Average.CalculateForSemester(semester);
 }
 
 <div>
+    <a asp-controller="Semesters" asp-action="Index">← Zurück zur Semesterübersicht</a>
+</div>
+<div>
     <h4>Du befindest dich momentan im Semester: <br/>@semester.Name</h4>
+</div>
+<div>
+    <p>Durchschnitt: @semesterAverage</p>
 </div>
 <hr/>
 
@@ -16,24 +23,30 @@
 </p>
 <table class="table">
     <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th></th>
-        </tr>
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Name)
+        </th>
+        <th>Aktionen</th>
+        <th>Durchschnitt des Moduls</th>
+    </tr>
     </thead>
     <tbody>
     @foreach (var item in Model)
     {
+        var average = Average.CalculateForModul(item);
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Name)
+                <a asp-area="" asp-controller="Grades" asp-action="Index" asp-route-modulId="@item.ModulID">
+                    @Html.DisplayFor(modelItem => item.Name)
+                </a>
             </td>
             <td>
-                <a asp-action="Edit" asp-route-semesterId="@ViewContext.RouteData.Values["semesterId"]" asp-route-id="@item.ModulID">Edit</a> |
-                <a asp-action="Delete" asp-route-semesterId="@ViewContext.RouteData.Values["semesterId"]" asp-route-id="@item.ModulID">Delete</a> |
-                <a asp-area="" asp-controller="Grades" asp-action="Index" asp-route-modulId="@item.ModulID">Details</a>
+                <a asp-action="Edit" asp-route-semesterId="@ViewContext.RouteData.Values["semesterId"]" asp-route-id="@item.ModulID">Bearbeiten</a> |
+                <a asp-action="Delete" asp-route-semesterId="@ViewContext.RouteData.Values["semesterId"]" asp-route-id="@item.ModulID">Löschen</a>
+            </td>
+            <td>
+                <p>@average</p>
             </td>
         </tr>
     }
