--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Willkommen beim Notentool</h1>
+    <h1 class="display-4">Herzlich Willkommen</h1>
 </div>
 
 @{
